--- a/app/src/main/res/layout/fragment_beat_box.xml
+++ b/app/src/main/res/layout/fragment_beat_box.xml
@@ -1,11 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/recycler_view"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="seekBarModel"
+            type="com.fox.andrey.beatbox.SeekBarValueModel"/>
+    </data>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.fox.andrey.beatbox.BeatBoxActivity">
+        android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/seek_bar_tv"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{seekBarModel.mSeekBarValue}"
+            android:layout_above="@id/seek_bar"
+            />
+        <SeekBar
+            android:id="@+id/seek_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:paddingBottom="5dp"
+            android:max="200"
+            android:progress="@{seekBarModel.mSeekBarRate}"
+            android:onProgressChanged="@{seekBarModel::onSeekBarChanged}"
+            />
+        <android.support.v7.widget.RecyclerView
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context="com.fox.andrey.beatbox.BeatBoxActivity"
+            android:layout_above="@id/seek_bar_tv"
+            >
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
+
 </layout>
+
+
+
+
