--- a/app/src/main/res/layout/list_item_sound.xml
+++ b/app/src/main/res/layout/list_item_sound.xml
@@ -6,12 +6,19 @@
             name="viewModel"
             type="com.fox.andrey.beatbox.SoundViewModel"/>
     </data>
+<FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp">
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
         android:onClick="@{()-> viewModel.onButtonClicked()}"
         android:text="@{viewModel.title}"
-        tools:text = "Sound name"/>
+        tools:text="Sound name" />
+
+</FrameLayout>
 
 </layout>
